feat: implement run announcement
