# TWN.DiscordBot.ControlPanel/Controller/IBotDataController.cs
@@ -7,8 +7,9 @@ namespace TWN.DiscordBot.ControlPanel.Controller;
 
 public interface IBotDataController
 {
-  Task<OneOf<Success, Error<string>>> DeleteAnnouncement(string? botID, string twitchUser, long guildID, long? channelID);
-  Task<OneOf<OneOf.Types.Success, OneOf.Types.Error<string>>> AddAnnouncement(string? botID, string twitchUser, long guildID, long channelID);
+  Task<OneOf<Success, Error<string>>> PostTwitchAnnouncementAsync(string? botID, string twitchUser, long guildID, long channelID, CancellationToken cancellationToken);
+  Task<OneOf<Success, Error<string>>> DeleteAnnouncementAsync(string? botID, string twitchUser, long guildID, long? channelID, CancellationToken cancellationToken);
+  Task<OneOf<Success, Error<string>>> AddAnnouncementAsync(string? botID, string twitchUser, long guildID, long channelID, CancellationToken cancellationToken);
   Task<DiscordClientData> GetDiscordClientDataAsync(string? botID, CancellationToken cancellationToken);
   Task<string?> GetBotNameAsync(string? botID, CancellationToken cancellationToken);
   Task<IEnumerable<AnnouncementData>> GetBotAnnouncementsAsync(string? botID, CancellationToken cancellationToken);
